Overflow handled correctly for engine messages.

--- a/projects/acquacchi/css/acquacchi.css
+++ b/projects/acquacchi/css/acquacchi.css
@@ -63,10 +63,15 @@ h2 {
 }
 
 .texter {
-  width: 20%;
+  width: 100%;
   float: left;
-  padding-left: 0.5em;
   text-align: left;
+}
+
+#texter {
+  padding-left: 0.5em;
+  overflow: auto;
+  /* flex-direction: column-reverse; */
 }
 
 #moves-container {
